--- a/test.html
+++ b/test.html
@@ -1,1 +1,2 @@
-hello
+<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
+<zero-md src="README.md"></zero-md>
