--- a/index.htm
+++ b/index.htm
@@ -1,2 +1,2 @@
-<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
+<script type="module" src="index.htm.zero-md.min.js"></script>
 <zero-md src="README.md"></zero-md>
